public/css/chat.css
html, body {
	height: 100%;
}

.main-content {
	position: relative;
	height: 90%; /* fallback if calc not supported */
	height: calc(100% - 70px);
}

.users_div {
	width: 150px;
	position: absolute;
	right: 0;
}

.chat-div {
	position: relative;
	margin-right: 130px;
	height: 100%;
}

.chat-div legend {
	display: none;
}

.chat-messages-div {
	position: absolute;
	overflow-y: auto;
	top: 0;
	bottom: 70px;
	width: 98%;
}

.chat-message {
	padding-top: 10px;
	border-top: 1px solid #E5E5E5;
}

.chat-message-body {
	padding-top: 5px;
}

.chat-input {
	position: absolute;
	margin-right: 130px;
	padding-bottom: 9px;
	bottom: 0;
	width: 98%;
}

.chat-input textarea {
	width: 100%;
}

/*
|--------------------------------------------------------------------------
| Responsive code
|--------------------------------------------------------------------------
| 
| Media queries to make this work with mobile
| 
*/
@media (max-width: 768px) {
	#send_button {
		display: none;
	}

	.chat-div {
		margin-right: 0;
	}

	.chat-div legend {
		display: block;
	}

	.users_div {
		position: relative;
	}

	.chat-messages-div {
		position: relative;
		width: 100%;
	}

	.chat-messages-div {
		position: relative;
		width: 100%;
	}

	.chat-input {
		position: relative;
		width: 100%;
	}
}

